--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask
-gunicorn
-opencv-python-headless==4.5.1.48
-numpy
-pytesseract
-gTTS==2.5.1
+Flask==2.2.5
+gunicorn==21.2.0
+opencv-python-headless==4.7.0.72
+numpy==1.23.5
+Pillow==9.5.0
+werkzeug==2.2.3
