--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ gunicorn==21.2.0
 opencv-python-headless==4.7.0.72
 numpy==1.23.5
 Pillow==9.5.0
-werkzeug==2.2.3
+Werkzeug==2.2.3
 pytesseract==0.3.10
-gtts==2.3.0
+gTTS==2.3.0
